--- a/index.html
+++ b/index.html
@@ -40,27 +40,39 @@
                 <p class="form-heading">Let's do this!</p>
                 <form action="#" id="myform">
                     <div>
-                        <label for="firstname">First Name</label>
-                        <input type="text" id="firstname">
-                        <label for="lastname">Last Name</label>
-                        <input type="text" id="lastname">
+                        <div>
+                            <label for="firstname">First Name</label>
+                            <input type="text" id="firstname">
+                        </div>
+                        <div>
+                            <label for="lastname">Last Name</label>
+                            <input type="text" id="lastname">
+                        </div>
                     </div>
                     <div>
-                        <label for=""></label>
-                        <input type="text">
-                        <label for=""></label>
-                        <input type="text">
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id="email">
+                        </div>
+                        <div>
+                            <label for="phonenumber">Phone Number</label>
+                            <input type="text" id="phonenumber">
+                        </div>
                     </div>
                     <div>
-                        <label for=""></label>
-                        <input type="text">
-                        <label for=""></label>
-                        <input type="text">
+                        <div>
+                            <label for="password">Password</label>
+                            <input type="password" id="password">
+                        </div>
+                        <div>
+                            <label for="comfirmpassword">Confirm Password</label>
+                            <input type="password" id="confirmpassword">
+                        </div>
                     </div>
                 </form>
             </div>
             <div class="actions">
-                <button type="submit" form="myform"></button>
+                <button type="submit" form="myform">Create Account</button>
             </div>
         </div>
     </div>
