--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>
                     This is not a real online service! You know you need something like this in your life to help you
                     realize your deepest dreams. Sign up <em>now</em> to get started.
-                </p>
+                </p><br>
                 <p>
                     You <em>know</em> you want to.
                 </p>
@@ -42,37 +42,40 @@
                     <div>
                         <div>
                             <label for="firstname">First Name</label>
-                            <input type="text" id="firstname">
+                            <input type="text" id="firstname" required>
                         </div>
                         <div>
                             <label for="lastname">Last Name</label>
-                            <input type="text" id="lastname">
+                            <input type="text" id="lastname" required>
                         </div>
                     </div>
                     <div>
                         <div>
                             <label for="email">Email</label>
-                            <input type="email" id="email">
+                            <input type="email" id="email" required>
                         </div>
                         <div>
                             <label for="phonenumber">Phone Number</label>
-                            <input type="text" id="phonenumber">
+                            <input type="text" id="phonenumber" required>
                         </div>
                     </div>
                     <div>
                         <div>
                             <label for="password">Password</label>
-                            <input type="password" id="password">
+                            <input type="password" id="password" required>
                         </div>
                         <div>
-                            <label for="comfirmpassword">Confirm Password</label>
-                            <input type="password" id="confirmpassword">
+                            <label for="confirmpassword">Confirm Password</label>
+                            <input type="password" id="confirmpassword" required>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="actions">
                 <button type="submit" form="myform">Create Account</button>
+                <div class="login-container">
+                    <p>Already have an account?</p><a href="#" class="login">Log in</a>
+                </div>
             </div>
         </div>
     </div>
