Style valid/invalid inputs Style button/login section

--- a/index.html
+++ b/index.html
@@ -41,32 +41,32 @@
                 <form action="#" id="myform">
                     <div>
                         <div>
-                            <label for="firstname">First Name</label>
                             <input type="text" id="firstname" required>
+                            <label for="firstname">First Name</label>                   
                         </div>
                         <div>
-                            <label for="lastname">Last Name</label>
                             <input type="text" id="lastname" required>
+                            <label for="lastname">Last Name</label>                            
                         </div>
                     </div>
                     <div>
                         <div>
-                            <label for="email">Email</label>
                             <input type="email" id="email" required>
+                            <label for="email">Email</label>                        
                         </div>
                         <div>
-                            <label for="phonenumber">Phone Number</label>
                             <input type="text" id="phonenumber" required>
+                            <label for="phonenumber">Phone Number</label>
                         </div>
                     </div>
                     <div>
-                        <div>
-                            <label for="password">Password</label>
+                        <div>                            
                             <input type="password" id="password" required>
+                            <label for="password">Password</label>
                         </div>
                         <div>
-                            <label for="confirmpassword">Confirm Password</label>
                             <input type="password" id="confirmpassword" required>
+                            <label for="confirmpassword">Confirm Password</label>                        
                         </div>
                     </div>
                 </form>
@@ -74,11 +74,12 @@
             <div class="actions">
                 <button type="submit" form="myform">Create Account</button>
                 <div class="login-container">
-                    <p>Already have an account?</p><a href="#" class="login">Log in</a>
+                    <p>Already have an account?</p><a href="#" class="login">Log in!</a>
                 </div>
             </div>
         </div>
     </div>
+    <script src="/main.js"></script>
 </body>
 
 </html>
